test(metadata): keep reader contract Java compatible